Add functionality to add members to companies
